--- a/instagram/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram/instagram-app/src/components/CommentSection/CommentSection.css
@@ -11,7 +11,7 @@ form{
 }
 
 .commentsectioncontainer{
-    border: 1px solid gray;
+    border: 1px solid lavender;
     width: 63.8%;
     margin-left: 180px;
     border-radius: 3px;
