added font awesome icons, styling tweaks

--- a/instagram/ig-app-week-two/src/Components/CommentSection/CommentSection.css
+++ b/instagram/ig-app-week-two/src/Components/CommentSection/CommentSection.css
@@ -26,3 +26,13 @@
 .comment-text {
     margin-top: 20px
 }
+
+.commentlike{
+    width: 50px;
+}
+
+.commentbubble{
+    width: 50px;
+    margin-left: 50px;
+    margin-top: -20px;
+}
