--- a/instagram/ig-app-week-two/src/Components/CommentSection/CommentSection.css
+++ b/instagram/ig-app-week-two/src/Components/CommentSection/CommentSection.css
@@ -16,6 +16,7 @@
     width: 63.8%;
     margin-left: 180px;
     border-radius: 3px;
+    border-top: 1px solid white;
 }
 
 .comment-text .user{
@@ -25,14 +26,4 @@
 
 .comment-text {
     margin-top: 20px
-}
-
-.commentlike{
-    width: 50px;
-}
-
-.commentbubble{
-    width: 50px;
-    margin-left: 50px;
-    margin-top: -20px;
 }
