--- a/instagram/ig-app-week-two/src/Components/SearchBar/SearchBar.css
+++ b/instagram/ig-app-week-two/src/Components/SearchBar/SearchBar.css
@@ -8,6 +8,7 @@
 
 .image-wrapper{
     height: 50px;
+    font-size: 50px;
 }
 
 .social-wrapper{
@@ -16,8 +17,11 @@
 
 .social{
     width: 50px;
+    font-size: 30px;
 }
 
 input{
     margin-left: 100px;
+    font-size: 20px;
+    margin-bottom: -10px;
 }
